<resources>
    <string name="app_name">CarboMobile</string>
    <string name="petunjuk_penggunaan">Petunjuk</string>
    <string name="pendahuluan">Pendahuluan</string>
    <string name="tujuan">Tujuan</string>
    <string name="goto_home">Kembali ke Beranda</string>
    <string name="materi">Materi</string>
    <string name="profil">Profil</string>
    <string name="evaluasi">Evaluasi</string>
    <string name="referensi">Referensi</string>
    <string name="lipsum">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</string>
    <string name="lorem_ipsum_1">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</string>
    <string name="lorem_ipsum_2">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</string>
    <string name="lorem_ipsum_3">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="karbohidrat">Karbohidrat</string>
    <string name="monosakarida">Monosakarida</string>
    <string name="disakarida">Disakarida</string>
    <string name="polisakarida">Polisakarida</string>
    <string name="sumber_gambar">SUMBER GAMBAR</string>
    <string name="daftar_pustaka">DAFTAR PUSTAKA</string>
    <string name="sumber_video">SUMBER VIDEO</string>
    <string name="lanjut">Lanjut</string>
    <string name="pendahuluan_text">Modul kimia android ini berorientasi tiga level representasi yang berfokus pada tema karbohidrat. Modul android ini diharapkan mampu memfasilitasi pemelajar mahasiswa supaya dapat melakukan pembelajaran secara inovatif dan mandiri. Selain itu kedudukan modul ini dalam proses pembelajaran adalah sebagai media yang inovatif dan bersifat fleksibel sehingga memungkinkan pemelajar untuk melakukan proses pembelajaran di manapun dan kapanpun. Semoga modul ini dapat bermanfaat bagi pemelajar, juga pembelajar kimia khususnya yang mempelajari karbohidrat. Serta semoga modul ini dapat menjadi acuan dalam pembuatan media pembelajaran di kemudian hari.</string>
    <string name="target_1">Melalui visualisasi secara makroskopik, submikroskopik, dan simbolik mahasiswa mampu memahami tata nama dan sifat karbohidrat.</string>
    <string name="target_2">Melalui visualisasi secara makroskopik, submikroskopik, dan simbolik mahasiswa mampu memahami pembuatan karbohidrat.</string>
    <string name="target_3">Melalui visualisasi secara makroskopis, submikroskopis, dan simbolik mahasiswa mampu memahami reaksi-reaksi karbohidrat.</string>
    <string name="profile_description">Pria kelahiran 26 Maret 1996 ini bernama lengkap Muhamad Zeina Farhatuzaki. Jenjang pendidikan yang dilalui dimulai dari SDN 1 Sukamanah, MTsN Bojong, dan MAN 1 Kota Bandung. Kemudian melanjutkan ke jenjang perguruan tinggi di Univeritas Islam Negeri Sunan Gunung Djati Bandung dengan mengambil Program Studi Pendidikan Kimia.
Selain aktif dalam rutinitas perkuliahan, Ia juga aktif di organisasi intrakampus, ekstrakampus, dan kegiatan di luar perkulihan. Salah satu kegiatan di luar kampus adalah menjadi bagian dari tim nasyid LM Voice asal Bandung.
Prestasi yang pernah diraih yaitu terpilih sebagai Putra Pendidikan Kimia 2017 pada acara Pekan Raya Pendidikan Kimia tahun 2017. Selain itu bersama kelompok nasyidnya Ia berhasil meraih juara 2 Nasyid se-Asia Tenggara pada acara Festival Nasyid yang bertajuk Da’i Voice yang dilaksanakan di Pattani, Thailand tahun 2017.
    </string>
    <string name="rules">PETUNJUK
        Pilihlah satu jawaban yang Anda anggap benar
        Jawaban yang Anda pilih akan berubah warna menjadi biru jika benar, dan akan berubah menjadi merah jika salah
        Klik tombol “Lanjut” untuk melanjutkan pertanyaan berikutnya
    </string>
</resources>
